# ML-Coverage

./: .gitignore  LICENSE  NOTICE  README.md  download.sh  pyproject.toml  requirements.txt
exps/: lateral.sh  soap.sh
exps/schnet/: predict.yaml  train.yaml
latinn/: train.py
latinn/models/: __init__.py  base.py  interaction.py  soap.py
latinn/models/components/: cutoff.py  dense_net.py  interaction_net.py  normalize.py  radial.py
latinn/utils/: __init__.py  ddp.py  rich_utils.py  utils.py  writer.py
nbs/: 01-dset-statistics.ipynb  01-view-sites.ipynb  01a-view-sites.ipynb  01b-dset-statistics.ipynb  02-extrapolation-covsplit.ipynb  02-extrapolation-evencov.ipynb  02-extrapolation-facets.ipynb  02-extrapolation-mace.ipynb  02-extrapolation-models.ipynb  02-extrapolation-umap.ipynb  02-mace-relax.ipynb  02a-extrapolation-mace.ipynb  02b-extrapolation-soap.ipynb  03-extrapolation-models.ipynb  03-extrapolation-umap.ipynb  03-learning-mace.ipynb  03a-learning-mace.ipynb  03b-extrapolation-models.ipynb  04-mcmc-curves.ipynb  04-mcmc-distributions.ipynb  04-mcmc-mace.ipynb  04-sampling-distributions.ipynb  04-sampling-highe.ipynb  04-sampling-results.ipynb  04-sampling-top.ipynb  04a-mcmc-distributions.ipynb  04b-mcmc-comparison.ipynb  04c-mcmc-parity.ipynb  05-mace-relax.ipynb  05-mcmc-relax.ipynb  05a-dset-relax.ipynb  05b-relax-cn.ipynb  06a-diff-bind.ipynb  07a-Rh111-mace.ipynb  07b-Rh111-mcmc.ipynb  07c-Rh111-neb.ipynb  basics.py  plotting.py
scripts/: evaluate.py  preprocess_dset.py  sample.py  sample_cfg.json  soap.py
