[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "latinn"
version = "0.1.0"
description = "Lateral Interaction Neural Networks for coverage-dependent calculations in catalysis"
authors = [{name = "Daniel Schwalbe-Koda", email = "dskoda@ucla.edu"}]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
keywords = ["catalysis", "machine-learning", "neural-networks"]
dependencies = [
    "ase",
    "pytorch-lightning==2.0.9.post0",
    "hydra-core",
]

[project.urls]
Homepage = "https://github.com/dskoda/ML-Coverage"

[tool.setuptools]
packages = ["latinn"]

[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--durations=0",
  "--strict-markers",
  "--doctest-modules",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
]
log_cli = "True"
markers = [
  "slow: slow tests",
]
minversion = "6.0"
testpaths = "tests/"

[tool.coverage.report]
exclude_lines = [
    "pragma: nocover",
    "raise NotImplementedError",
    "raise NotImplementedError()",
    "if __name__ == .__main__.:",
]
